<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/margin_16"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:contentDescription="@string/button" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/sort_by_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSecondary"/>

        <RelativeLayout
            android:id="@+id/ascending"
            android:layout_below="@id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_ascending"
                android:src="@drawable/ic_baseline_sort_by_alpha_24"
                android:contentDescription="@string/image" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending"
                android:textSize="16sp"
                android:textColor="?attr/colorOnSecondary"
                android:layout_toEndOf="@id/img_ascending"
                android:layout_marginStart="@dimen/margin_16"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/descending"
            android:layout_below="@id/ascending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16"
            android:layout_marginBottom="32dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_descending"
                android:src="@drawable/ic_baseline_sort_by_alpha_24"
                android:contentDescription="@string/image" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descending"
                android:textSize="16sp"
                android:textColor="?attr/colorOnSecondary"
                android:layout_toEndOf="@id/img_descending"
                android:layout_marginStart="@dimen/margin_16"/>

        </RelativeLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>